# learning-rust

./: README.md
collections/src/: main.rs
general/: Cargo.toml
general/src/functions/: main.rs
general/src/struct/: main.rs
general/src/variables/: main.rs
generics/: main.mir  option.mir
generics/src/: main.rs  option.rs
guessing_game/src/: main.rs
minigrep/src/: lib.rs  main.rs
restaurants/src/: lib.rs
variables/: Cargo.toml
variables/src/memory/: main.rs
